--- a/my-site.conf
+++ b/my-site.conf
@@ -11,4 +11,4 @@
   </Directory>
   ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
-</VirtualHost>[
+</VirtualHost>
